# AIMeridian

./: .gitignore  CLAUDE.md
.github/workflows/: ci.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/db/: seed.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 001_initial_schema.py
backend/app/models/: __init__.py  content.py  feedback.py  filter_preset.py  preference.py  source.py  target.py
backend/app/schemas/: content.py  feedback.py  source.py
backend/app/services/: summariser.py
backend/app/services/fetchers/: arxiv.py  base.py
backend/tests/: test_arxiv_fetcher.py  test_health.py  test_summariser.py
docs/: api-spec.md  architecture.md  data-model.md  design-system.md  implementation-plan.md  llm-prompts.md  source-catalog.md
docs/adr/: ADR-001-component-library.md  ADR-002-background-job-runner.md  ADR-003-llm-usage.md  ADR-004-refresh-cadence.md  ADR-005-xcom-linkedin-strategy.md
frontend/: package.json  pnpm-lock.yaml
